--- a/APP BINGO INTERFAZ/index.html
+++ b/APP BINGO INTERFAZ/index.html
@@ -2,23 +2,97 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Bingo 00-99</title>
+  <title>Bingo Morfi</title>
   <style>
-    body { font-family: sans-serif; text-align: center; background: #f0f0f0; }
-    .grid { display: grid; grid-template-columns: repeat(10, 1fr); gap: 5px; max-width: 400px; margin: 20px auto; }
-    .cell {
-      background: white; border: 1px solid #ccc; padding: 15px;
-      cursor: pointer; font-weight: bold; border-radius: 8px;
-      transition: background 0.2s;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-    .cell.marked { background: #4caf50; color: white; }
-    button { margin-top: 20px; padding: 10px 20px; font-size: 16px; }
+
+    header {
+      background: #222;
+      color: white;
+      padding: 20px;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
+      gap: 5px;
+      max-width: 500px;
+      margin: 30px auto;
+    }
+
+    .cell {
+      background: white;
+      border: 2px solid #ccc;
+      padding: 15px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 16px;
+      border-radius: 10px;
+      transition: all 0.2s;
+    }
+
+    .cell.marked {
+      background: #e91e63;
+      color: white;
+      border-color: #c2185b;
+    }
+
+    .btn {
+      background-color: #4caf50;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      margin: 15px 5px;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #videoContainer {
+      display: none;
+      padding: 20px;
+    }
+
+    iframe {
+      width: 80%;
+      height: 400px;
+      border: none;
+      border-radius: 12px;
+    }
   </style>
 </head>
 <body>
-  <h1>Bingo 00-99</h1>
-  <div class="grid" id="bingoGrid"></div>
-  <button onclick="resetGrid()">Resetear todo</button>
+  <header>
+    <img src="https://drive.google.com/drive/u/0/folders/1r6ISArXb1M1KizfOA6-aSvPHWZ4tqdti" alt="Logo Bingo">
+    <h1>Bingo Morfi</h1>
+  </header>
+
+  <div id="bingoContainer">
+    <div class="grid" id="bingoGrid"></div>
+    <button class="btn" onclick="resetGrid()">Resetear todo</button>
+    <button class="btn" onclick="goToBreak()">Break 🎬</button>
+  </div>
+
+  <div id="videoContainer">
+    <h2>Momento Break 🎥</h2>
+    <iframe id="breakVideo" src="https://www.youtube.com/watch?v=gULJuRGdYms&list=RDgULJuRGdYms&start_radio=1" allow="autoplay"></iframe>
+    <br>
+    <button class="btn" onclick="returnToBingo()">Volver al Bingo</button>
+  </div>
 
   <script>
     const grid = document.getElementById('bingoGrid');
@@ -45,6 +119,18 @@
     function resetGrid() {
       localStorage.removeItem('bingoMarked');
       document.querySelectorAll('.cell').forEach(c => c.classList.remove('marked'));
+    }
+
+    function goToBreak() {
+      document.getElementById('bingoContainer').style.display = 'none';
+      document.getElementById('videoContainer').style.display = 'block';
+    }
+
+    function returnToBingo() {
+      const iframe = document.getElementById('breakVideo');
+      iframe.src = iframe.src; // reinicia el video
+      document.getElementById('videoContainer').style.display = 'none';
+      document.getElementById('bingoContainer').style.display = 'block';
     }
   </script>
 </body>
